[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/Enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/Enemy/Fly/fly.png" type="Texture" id=2]
[ext_resource path="res://entities/Enemy/Fly/Fly.gd" type="Script" id=3]

[sub_resource type="OccluderPolygon2D" id=1]

[sub_resource type="CapsuleShape2D" id=2]
radius = 11.0
height = 0.0

[node name="Fly" instance=ExtResource( 1 )]
script = ExtResource( 3 )
speed = 200
attack_range = 200

[node name="LightOccluder2D" parent="." index="0"]
occluder = SubResource( 1 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 2 )

[node name="Sprite" parent="." index="2"]
texture = ExtResource( 2 )

[node name="Tail" type="Position2D" parent="." index="3"]
position = Vector2( 0, 16 )

[node name="AttackChargeTimer" type="Timer" parent="." index="4"]
one_shot = true

[node name="AttackCooldownTimer" type="Timer" parent="." index="5"]
one_shot = true

[node name="RandomMoveTimer" type="Timer" parent="." index="6"]
one_shot = true

[node name="Light2D" type="Light2D" parent="." index="7"]
[connection signal="timeout" from="AttackChargeTimer" to="." method="_on_AttackChargeTimer_timeout"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_AttackCooldownTimer_timeout"]
[connection signal="timeout" from="RandomMoveTimer" to="." method="_on_RandomMoveTimer_timeout"]
